Update to JAVA 22